--- a/Phantom Bomber/main.html
+++ b/Phantom Bomber/main.html
@@ -8,7 +8,7 @@
     <body>
         <font face="calibri">
             <h1>Show command</h1>
-            <a href="command.html">
+            <a target="blank" href="command.html">
             <button onclick="window.location.href='youtube.com/channel/UCsKQFPIXCjx4cKfasFaZygg?sub_confirmation=1'">Consider subscribing before using this command.</button>
             </a>
         </font>
